# fastapi-motor-beanie

./: .gitignore  Dockerfile  README.md  pyproject.toml  setup.cfg  skaffold.yaml  test.sh
.github/: prlint.json
.github/workflows/: ci.yml  release.yml
app/: start.py
app/apis/common/: routes.py
app/apis/common/status/: apis.py
app/apis/v1/: routes.py
app/apis/v1/student/: apis.py
app/apis/v1/teacher/: apis.py
app/common/base/: exception.py  mongo.py  repository.py  service.py
app/common/util/: logger.py  path.py  version.py
app/config/: setting.py
app/modules/common/counter/: counter.py
app/modules/status/: models.py  service.py
app/modules/student/: docs.py  models.py  repository.py  service.py
app/modules/teacher/: docs.py  models.py  repository.py  service.py
app/setup/: database.py  middleware.py  service.py
k8s/: default.yaml
k8s/mongodb/: README.md  values.yaml
tests/: conftest.py  fixtures.py  test_start.py
tests/apis/common/status/: test_apis.py
tests/apis/v1/student/: test_apis.py
tests/apis/v1/teacher/: test_apis.py
tests/common/util/: test_path.py
tests/modules/common/counter/: test_counter.py
tests/modules/student/: fixtures.py  test_repository.py  test_service.py
tests/modules/teacher/: fixtures.py  test_repository.py  test_service.py
